# fileflow-lite

./: .gitignore  HANDOFF.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: native-release.yml  release.yml
native/FileFlow.Core/: Executor.cs  JournalStore.cs  Models.cs  Planner.cs  Safety.cs  SelectionManifest.cs
native/FileFlow.Core.Tests/: FileFlow.Core.Tests.csproj  Program.cs
native/FileFlow.Shell/: ExplorerCommand.cpp  FileFlow.Shell.rc  FileFlow.Shell.vcxproj
native/FileFlow.Worker/: App.xaml  App.xaml.cs  ConfirmWindow.xaml  ConfirmWindow.xaml.cs  FileFlow.Worker.csproj  MainWindow.xaml  MainWindow.xaml.cs  PreviewRow.cs
packaging/msix/: AppxManifest.xml  FileFlow-Lite.appinstaller  Install-FileFlowLite.cmd  Install-FileFlowLite.ps1  Uninstall-FileFlowLite.ps1
scripts/: build-v2.ps1  build.ps1  context_menu.ps1  generate_icon.py  generate_msix_assets.py  make_shortcut.ps1  package.ps1
src/fileflow_lite/: __init__.py  __main__.py  app.py
src/fileflow_lite/core/: __init__.py  executor.py  flatten.py  journal.py  models.py  rename.py  safety.py
src/fileflow_lite/integration/: __init__.py  context_menu.py  updater.py
src/fileflow_lite/ui/: __init__.py  main_window.py  theme.py
tests/: test_core.py
ui-candidates/: style-a-calm-dashboard.html  style-b-explorer-native.html  style-c-step-by-step.html
