[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "fileflow-lite"
version = "0.1.0"
description = "Safe Windows folder flattening and sequential renaming utility"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "FileFlow Lite contributors"}]
classifiers = [
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
fileflow-lite = "fileflow_lite.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

